RESOLVED FIXED197057
Tile update problems in iframe after scrolling page too soon after load
https://bugs.webkit.org/show_bug.cgi?id=197057
Summary Tile update problems in iframe after scrolling page too soon after load
Antti Koivisto
Reported 2019-04-18 08:03:15 PDT
Summary: Tile update problems in iframe after scrolling page to quickly after load Steps To Reproduce: 1. https://www.bloomberg.com/graphics/2018-tesla-tracker/ 2. Scroll down to Tesla Production Blog section 3. Scroll the blog iframe Results: If you started scrolling the main page immediately after the page load to get to the blog, the iframe doesn’t generate tiles when scrolling. There is a main page scrolling jump soon after the load completes which may be related (some viewport update thing?) If you simply wait a bit after the page load without scrolling anything, the iframe scrolling works fine too later. Waiting until Reader availability text goes away is sufficient.
Attachments
patch (1.89 KB, patch)
2019-04-18 08:10 PDT, Antti Koivisto
no flags
Antti Koivisto
Comment 1 2019-04-18 08:06:28 PDT
Antti Koivisto
Comment 2 2019-04-18 08:10:32 PDT
WebKit Commit Bot
Comment 3 2019-04-18 09:32:04 PDT
Comment on attachment 367728 [details] patch Clearing flags on attachment: 367728 Committed r244426: <https://trac.webkit.org/changeset/244426>
WebKit Commit Bot
Comment 4 2019-04-18 09:32:05 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.