Tile update problems in iframe after scrolling page too soon after load https://bugs.webkit.org/show_bug.cgi?id=197057 <rdar://problem/49913663>

Reviewed by Simon Fraser.

We end up destroying FrameHosting scrolling node when we shouldn't.

No test, despite attempts I couldn't get this state to stick. The problem is that in
most cases the destroying scrolling node gets immediately recreated and connected again.
Getting into testably buggy state requires some very specific layer tree configuration update.

* rendering/RenderLayerBacking.cpp:
(WebCore::RenderLayerBacking::detachFromScrollingCoordinator):

Test the right thing.


Canonical link: https://commits.webkit.org/211308@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@244426 268f45cc-cd09-0410-ab3c-d52691b4dbfc